Edit channels page finished

--- a/UI/edit.html
+++ b/UI/edit.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="css/header.css" />
 		<link rel="stylesheet" href="css/nav.css" />
-		<link rel="stylesheet" href="css/home.css" />
+		<link rel="stylesheet" href="css/edit.css" />
 		<title>Lol</title>
 	</head>
 	<body>
@@ -23,7 +23,7 @@
 			</div>
 		</header>
 		<div class="logo">
-			<a href="#"
+			<a href="index.html"
 				><img class="yt-icon" src="images/yt_logo.png" alt="YT logo"
 			/></a>
 			<hr />
@@ -49,9 +49,11 @@
 		<table class="content">
 			<thead>
 				<tr>
-					<th class="img-title">‎‎‎‎‎</th>
+					<th class="img-title">‎‎‎‎‎‎</th>
 					<th class="channel-cell">Youtube channel name</th>
 					<th class="video-name">Last video name</th>
+					<th class="edit-btn"></th>
+					<th class="delete-btn"></th>
 				</tr>
 			</thead>
 			<tbody>
@@ -65,27 +67,15 @@
 					<td class="video-name">
 						The Fear of Technology is REAL... - WAN Show April 10, 2020
 					</td>
-				</tr>
-				<tr>
-					<td class="img-cell">
-						<img src="images/LTT.jpg" alt="ltt" class="youtube-channel-logo" />
+					<td class="edit-cell">
+						<a href="#"
+							><img class="edit-img" src="images/edit.png" alt="Edit"
+						/></a>
 					</td>
-					<td class="channel-cell">
-						LinusTechTips
-					</td>
-					<td class="video-name">
-						The Fear of Technology is REAL... - WAN Show April 10, 2020
-					</td>
-				</tr>
-				<tr>
-					<td class="img-cell">
-						<img src="images/LTT.jpg" alt="ltt" class="youtube-channel-logo" />
-					</td>
-					<td class="channel-cell">
-						LinusTechTips
-					</td>
-					<td class="video-name">
-						The Fear of Technology is REAL... - WAN Show April 10, 2020
+					<td class="delete-cell">
+						<a href="#"
+							><img class="delete-img" src="images/delete.png" alt="Edit"
+						/></a>
 					</td>
 				</tr>
 				<tr>
@@ -98,27 +88,15 @@
 					<td class="video-name">
 						The Fear of Technology is REAL... - WAN Show April 10, 2020
 					</td>
-				</tr>
-				<tr>
-					<td class="img-cell">
-						<img src="images/LTT.jpg" alt="ltt" class="youtube-channel-logo" />
+					<td class="edit-cell">
+						<a href="#"
+							><img class="edit-img" src="images/edit.png" alt="Edit"
+						/></a>
 					</td>
-					<td class="channel-cell">
-						LinusTechTips
-					</td>
-					<td class="video-name">
-						The Fear of Technology is REAL... - WAN Show April 10, 2020
-					</td>
-				</tr>
-				<tr>
-					<td class="img-cell">
-						<img src="images/LTT.jpg" alt="ltt" class="youtube-channel-logo" />
-					</td>
-					<td class="channel-cell">
-						LinusTechTips
-					</td>
-					<td class="video-name">
-						The Fear of Technology is REAL... - WAN Show April 10, 2020
+					<td class="delete-cell">
+						<a href="#"
+							><img class="delete-img" src="images/delete.png" alt="Edit"
+						/></a>
 					</td>
 				</tr>
 				<tr>
@@ -131,27 +109,15 @@
 					<td class="video-name">
 						The Fear of Technology is REAL... - WAN Show April 10, 2020
 					</td>
-				</tr>
-				<tr>
-					<td class="img-cell">
-						<img src="images/LTT.jpg" alt="ltt" class="youtube-channel-logo" />
+					<td class="edit-cell">
+						<a href="#"
+							><img class="edit-img" src="images/edit.png" alt="Edit"
+						/></a>
 					</td>
-					<td class="channel-cell">
-						LinusTechTips
-					</td>
-					<td class="video-name">
-						The Fear of Technology is REAL... - WAN Show April 10, 2020
-					</td>
-				</tr>
-				<tr>
-					<td class="img-cell">
-						<img src="images/LTT.jpg" alt="ltt" class="youtube-channel-logo" />
-					</td>
-					<td class="channel-cell">
-						LinusTechTips
-					</td>
-					<td class="video-name">
-						The Fear of Technology is REAL... - WAN Show April 10, 2020
+					<td class="delete-cell">
+						<a href="#"
+							><img class="delete-img" src="images/delete.png" alt="Edit"
+						/></a>
 					</td>
 				</tr>
 				<tr>
@@ -164,27 +130,15 @@
 					<td class="video-name">
 						The Fear of Technology is REAL... - WAN Show April 10, 2020
 					</td>
-				</tr>
-				<tr>
-					<td class="img-cell">
-						<img src="images/LTT.jpg" alt="ltt" class="youtube-channel-logo" />
+					<td class="edit-cell">
+						<a href="#"
+							><img class="edit-img" src="images/edit.png" alt="Edit"
+						/></a>
 					</td>
-					<td class="channel-cell">
-						LinusTechTips
-					</td>
-					<td class="video-name">
-						The Fear of Technology is REAL... - WAN Show April 10, 2020
-					</td>
-				</tr>
-				<tr>
-					<td class="img-cell">
-						<img src="images/LTT.jpg" alt="ltt" class="youtube-channel-logo" />
-					</td>
-					<td class="channel-cell">
-						LinusTechTips
-					</td>
-					<td class="video-name">
-						The Fear of Technology is REAL... - WAN Show April 10, 2020
+					<td class="delete-cell">
+						<a href="#"
+							><img class="delete-img" src="images/delete.png" alt="Edit"
+						/></a>
 					</td>
 				</tr>
 				<tr>
@@ -197,27 +151,15 @@
 					<td class="video-name">
 						The Fear of Technology is REAL... - WAN Show April 10, 2020
 					</td>
-				</tr>
-				<tr>
-					<td class="img-cell">
-						<img src="images/LTT.jpg" alt="ltt" class="youtube-channel-logo" />
+					<td class="edit-cell">
+						<a href="#"
+							><img class="edit-img" src="images/edit.png" alt="Edit"
+						/></a>
 					</td>
-					<td class="channel-cell">
-						LinusTechTips
-					</td>
-					<td class="video-name">
-						The Fear of Technology is REAL... - WAN Show April 10, 2020
-					</td>
-				</tr>
-				<tr>
-					<td class="img-cell">
-						<img src="images/LTT.jpg" alt="ltt" class="youtube-channel-logo" />
-					</td>
-					<td class="channel-cell">
-						LinusTechTips
-					</td>
-					<td class="video-name">
-						The Fear of Technology is REAL... - WAN Show April 10, 2020
+					<td class="delete-cell">
+						<a href="#"
+							><img class="delete-img" src="images/delete.png" alt="Edit"
+						/></a>
 					</td>
 				</tr>
 				<tr>
@@ -230,27 +172,15 @@
 					<td class="video-name">
 						The Fear of Technology is REAL... - WAN Show April 10, 2020
 					</td>
-				</tr>
-				<tr>
-					<td class="img-cell">
-						<img src="images/LTT.jpg" alt="ltt" class="youtube-channel-logo" />
+					<td class="edit-cell">
+						<a href="#"
+							><img class="edit-img" src="images/edit.png" alt="Edit"
+						/></a>
 					</td>
-					<td class="channel-cell">
-						LinusTechTips
-					</td>
-					<td class="video-name">
-						The Fear of Technology is REAL... - WAN Show April 10, 2020
-					</td>
-				</tr>
-				<tr>
-					<td class="img-cell">
-						<img src="images/LTT.jpg" alt="ltt" class="youtube-channel-logo" />
-					</td>
-					<td class="channel-cell">
-						LinusTechTips
-					</td>
-					<td class="video-name">
-						The Fear of Technology is REAL... - WAN Show April 10, 2020
+					<td class="delete-cell">
+						<a href="#"
+							><img class="delete-img" src="images/delete.png" alt="Edit"
+						/></a>
 					</td>
 				</tr>
 				<tr>
@@ -263,27 +193,15 @@
 					<td class="video-name">
 						The Fear of Technology is REAL... - WAN Show April 10, 2020
 					</td>
-				</tr>
-				<tr>
-					<td class="img-cell">
-						<img src="images/LTT.jpg" alt="ltt" class="youtube-channel-logo" />
+					<td class="edit-cell">
+						<a href="#"
+							><img class="edit-img" src="images/edit.png" alt="Edit"
+						/></a>
 					</td>
-					<td class="channel-cell">
-						LinusTechTips
-					</td>
-					<td class="video-name">
-						The Fear of Technology is REAL... - WAN Show April 10, 2020
-					</td>
-				</tr>
-				<tr>
-					<td class="img-cell">
-						<img src="images/LTT.jpg" alt="ltt" class="youtube-channel-logo" />
-					</td>
-					<td class="channel-cell">
-						LinusTechTips
-					</td>
-					<td class="video-name">
-						The Fear of Technology is REAL... - WAN Show April 10, 2020
+					<td class="delete-cell">
+						<a href="#"
+							><img class="delete-img" src="images/delete.png" alt="Edit"
+						/></a>
 					</td>
 				</tr>
 				<tr>
@@ -296,27 +214,15 @@
 					<td class="video-name">
 						The Fear of Technology is REAL... - WAN Show April 10, 2020
 					</td>
-				</tr>
-				<tr>
-					<td class="img-cell">
-						<img src="images/LTT.jpg" alt="ltt" class="youtube-channel-logo" />
+					<td class="edit-cell">
+						<a href="#"
+							><img class="edit-img" src="images/edit.png" alt="Edit"
+						/></a>
 					</td>
-					<td class="channel-cell">
-						LinusTechTips
-					</td>
-					<td class="video-name">
-						The Fear of Technology is REAL... - WAN Show April 10, 2020
-					</td>
-				</tr>
-				<tr>
-					<td class="img-cell">
-						<img src="images/LTT.jpg" alt="ltt" class="youtube-channel-logo" />
-					</td>
-					<td class="channel-cell">
-						LinusTechTips
-					</td>
-					<td class="video-name">
-						The Fear of Technology is REAL... - WAN Show April 10, 2020
+					<td class="delete-cell">
+						<a href="#"
+							><img class="delete-img" src="images/delete.png" alt="Edit"
+						/></a>
 					</td>
 				</tr>
 				<tr>
@@ -328,6 +234,163 @@
 					</td>
 					<td class="video-name">
 						The Fear of Technology is REAL... - WAN Show April 10, 2020
+					</td>
+					<td class="edit-cell">
+						<a href="#"
+							><img class="edit-img" src="images/edit.png" alt="Edit"
+						/></a>
+					</td>
+					<td class="delete-cell">
+						<a href="#"
+							><img class="delete-img" src="images/delete.png" alt="Edit"
+						/></a>
+					</td>
+				</tr>
+				<tr>
+					<td class="img-cell">
+						<img src="images/LTT.jpg" alt="ltt" class="youtube-channel-logo" />
+					</td>
+					<td class="channel-cell">
+						LinusTechTips
+					</td>
+					<td class="video-name">
+						The Fear of Technology is REAL... - WAN Show April 10, 2020
+					</td>
+					<td class="edit-cell">
+						<a href="#"
+							><img class="edit-img" src="images/edit.png" alt="Edit"
+						/></a>
+					</td>
+					<td class="delete-cell">
+						<a href="#"
+							><img class="delete-img" src="images/delete.png" alt="Edit"
+						/></a>
+					</td>
+				</tr>
+				<tr>
+					<td class="img-cell">
+						<img src="images/LTT.jpg" alt="ltt" class="youtube-channel-logo" />
+					</td>
+					<td class="channel-cell">
+						LinusTechTips
+					</td>
+					<td class="video-name">
+						The Fear of Technology is REAL... - WAN Show April 10, 2020
+					</td>
+					<td class="edit-cell">
+						<a href="#"
+							><img class="edit-img" src="images/edit.png" alt="Edit"
+						/></a>
+					</td>
+					<td class="delete-cell">
+						<a href="#"
+							><img class="delete-img" src="images/delete.png" alt="Edit"
+						/></a>
+					</td>
+				</tr>
+				<tr>
+					<td class="img-cell">
+						<img src="images/LTT.jpg" alt="ltt" class="youtube-channel-logo" />
+					</td>
+					<td class="channel-cell">
+						LinusTechTips
+					</td>
+					<td class="video-name">
+						The Fear of Technology is REAL... - WAN Show April 10, 2020
+					</td>
+					<td class="edit-cell">
+						<a href="#"
+							><img class="edit-img" src="images/edit.png" alt="Edit"
+						/></a>
+					</td>
+					<td class="delete-cell">
+						<a href="#"
+							><img class="delete-img" src="images/delete.png" alt="Edit"
+						/></a>
+					</td>
+				</tr>
+				<tr>
+					<td class="img-cell">
+						<img src="images/LTT.jpg" alt="ltt" class="youtube-channel-logo" />
+					</td>
+					<td class="channel-cell">
+						LinusTechTips
+					</td>
+					<td class="video-name">
+						The Fear of Technology is REAL... - WAN Show April 10, 2020
+					</td>
+					<td class="edit-cell">
+						<a href="#"
+							><img class="edit-img" src="images/edit.png" alt="Edit"
+						/></a>
+					</td>
+					<td class="delete-cell">
+						<a href="#"
+							><img class="delete-img" src="images/delete.png" alt="Edit"
+						/></a>
+					</td>
+				</tr>
+				<tr>
+					<td class="img-cell">
+						<img src="images/LTT.jpg" alt="ltt" class="youtube-channel-logo" />
+					</td>
+					<td class="channel-cell">
+						LinusTechTips
+					</td>
+					<td class="video-name">
+						The Fear of Technology is REAL... - WAN Show April 10, 2020
+					</td>
+					<td class="edit-cell">
+						<a href="#"
+							><img class="edit-img" src="images/edit.png" alt="Edit"
+						/></a>
+					</td>
+					<td class="delete-cell">
+						<a href="#"
+							><img class="delete-img" src="images/delete.png" alt="Edit"
+						/></a>
+					</td>
+				</tr>
+				<tr>
+					<td class="img-cell">
+						<img src="images/LTT.jpg" alt="ltt" class="youtube-channel-logo" />
+					</td>
+					<td class="channel-cell">
+						LinusTechTips
+					</td>
+					<td class="video-name">
+						The Fear of Technology is REAL... - WAN Show April 10, 2020
+					</td>
+					<td class="edit-cell">
+						<a href="#"
+							><img class="edit-img" src="images/edit.png" alt="Edit"
+						/></a>
+					</td>
+					<td class="delete-cell">
+						<a href="#"
+							><img class="delete-img" src="images/delete.png" alt="Edit"
+						/></a>
+					</td>
+				</tr>
+				<tr>
+					<td class="img-cell">
+						<img src="images/LTT.jpg" alt="ltt" class="youtube-channel-logo" />
+					</td>
+					<td class="channel-cell">
+						LinusTechTips
+					</td>
+					<td class="video-name">
+						The Fear of Technology is REAL... - WAN Show April 10, 2020
+					</td>
+					<td class="edit-cell">
+						<a href="#"
+							><img class="edit-img" src="images/edit.png" alt="Edit"
+						/></a>
+					</td>
+					<td class="delete-cell">
+						<a href="#"
+							><img class="delete-img" src="images/delete.png" alt="Edit"
+						/></a>
 					</td>
 				</tr>
 			</tbody>
