--- a/UI/index.html
+++ b/UI/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<header>
 			<div class="title-div">
-				<h1 class="page-title">Wag1memeing Youtube Feed</h1>
+				<h1 class="page-title">Wag1 Memeing Youtube Feed</h1>
 			</div>
 			<div class="header-btns">
 				<a href="#" class="minimize"
