Nav links fixed

--- a/UI/edit.html
+++ b/UI/edit.html
@@ -29,22 +29,22 @@
 			<hr />
 		</div>
 		<nav>
-			<div class="nav-unit">
+			<a href="index.html" class="nav-unit">
 				<img class="nav-img" src="images/home.png" alt="Home" />
 				<span class="nav-desc">Home</span>
-			</div>
-			<div class="nav-unit">
+			</a>
+			<a href="add.html" class="nav-unit">
 				<img class="nav-img" src="images/plus.png" alt="Home" />
 				<span class="nav-desc">Add channel</span>
-			</div>
-			<div class="nav-unit">
+			</a>
+			<a href="edit.html" class="nav-unit">
 				<img class="nav-img" src="images/edit.png" alt="Home" />
 				<span class="nav-desc">Edit channels</span>
-			</div>
-			<div class="nav-unit">
+			</a>
+			<a href="#" class="nav-unit">
 				<img class="nav-img" src="images/download.png" alt="Home" />
 				<span class="nav-desc">Download config</span>
-			</div>
+			</a>
 		</nav>
 		<table class="content">
 			<thead>
