--- a/UI/index.html
+++ b/UI/index.html
@@ -23,28 +23,28 @@
 			</div>
 		</header>
 		<div class="logo">
-			<a href="#"
+			<a href="index.html"
 				><img class="yt-icon" src="images/yt_logo.png" alt="YT logo"
 			/></a>
 			<hr />
 		</div>
 		<nav>
-			<div class="nav-unit">
+			<a href="index.html" class="nav-unit">
 				<img class="nav-img" src="images/home.png" alt="Home" />
 				<span class="nav-desc">Home</span>
-			</div>
-			<div class="nav-unit">
+			</a>
+			<a href="add.html" class="nav-unit">
 				<img class="nav-img" src="images/plus.png" alt="Home" />
 				<span class="nav-desc">Add channel</span>
-			</div>
-			<div class="nav-unit">
+			</a>
+			<a href="edit.html" class="nav-unit">
 				<img class="nav-img" src="images/edit.png" alt="Home" />
 				<span class="nav-desc">Edit channels</span>
-			</div>
-			<div class="nav-unit">
+			</a>
+			<a href="#" class="nav-unit">
 				<img class="nav-img" src="images/download.png" alt="Home" />
 				<span class="nav-desc">Download config</span>
-			</div>
+			</a>
 		</nav>
 		<table class="content">
 			<thead>
