Settings icon added

--- a/UI/add.html
+++ b/UI/add.html
@@ -14,6 +14,9 @@
 				<h1 class="page-title">Wag1 Memeing Youtube Feed</h1>
 			</div>
 			<div class="header-btns">
+				<a href="#" class="settings">
+					<img src="images/settings.png" alt="Settings" />
+				</a>
 				<a href="#" class="minimize"
 					><img src="images/minimize.png" alt="Minimize"
 				/></a>
