Settings links up

--- a/UI/add.html
+++ b/UI/add.html
@@ -14,7 +14,7 @@
 				<h1 class="page-title">Wag1 Memeing Youtube Feed</h1>
 			</div>
 			<div class="header-btns">
-				<a href="#" class="settings">
+				<a href="settings.html" class="settings">
 					<img src="images/settings.png" alt="Settings" />
 				</a>
 				<a href="#" class="minimize"
