Minimize and close buttons now work

--- a/Wag1memeing-feed/src/home.html
+++ b/Wag1memeing-feed/src/home.html
@@ -17,10 +17,10 @@
 				<a href="settings.html" class="settings">
 					<img src="images/settings.png" alt="Settings" />
 				</a>
-				<a href="#" class="minimize"
+				<a href="javascript:Minimize()" class="minimize"
 					><img src="images/minimize.png" alt="Minimize"
 				/></a>
-				<a href="#" onclick="Exit()" class="exit"
+				<a href="javascript:Exit()" class="exit"
 					><img src="images/remove-close.png" alt="Minimize"
 				/></a>
 			</div>
