--- a/Wag1memeing-feed/src/edit.html
+++ b/Wag1memeing-feed/src/edit.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="css/header.css" />
 		<link rel="stylesheet" href="css/nav.css" />
 		<link rel="stylesheet" href="css/edit.css" />
-		<title>Lol</title>
+		<script defer src="js/buttons.js"></script>
 	</head>
 	<body>
 		<header>
@@ -17,22 +17,22 @@
 				<a href="settings.html" class="settings">
 					<img src="images/settings.png" alt="Settings" />
 				</a>
-				<a href="#" class="minimize"
+				<a href="javascript:Minimize()" class="minimize"
 					><img src="images/minimize.png" alt="Minimize"
 				/></a>
-				<a href="#" class="exit"
+				<a href="javascript:Exit()" class="exit"
 					><img src="images/remove-close.png" alt="Minimize"
 				/></a>
 			</div>
 		</header>
 		<div class="logo">
-			<a href="index.html"
+			<a href="home.html"
 				><img class="yt-icon" src="images/yt_logo.png" alt="YT logo"
 			/></a>
 			<hr />
 		</div>
 		<nav>
-			<a href="index.html" class="nav-unit">
+			<a href="home.html" class="nav-unit">
 				<img class="nav-img" src="images/home.png" alt="Home" />
 				<span class="nav-desc">Home</span>
 			</a>
