--- a/Wag1memeing-feed/src/home.html
+++ b/Wag1memeing-feed/src/home.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="css/header.css" />
 		<link rel="stylesheet" href="css/nav.css" />
 		<link rel="stylesheet" href="css/home.css" />
-		<script defer src="js/home.js"></script>
+		<script defer src="js/buttons.js"></script>
 	</head>
 	<body>
 		<header>
@@ -26,13 +26,13 @@
 			</div>
 		</header>
 		<div class="logo">
-			<a href="index.html"
+			<a href="home.html"
 				><img class="yt-icon" src="images/yt_logo.png" alt="YT logo"
 			/></a>
 			<hr />
 		</div>
 		<nav>
-			<a href="index.html" class="nav-unit">
+			<a href="home.html" class="nav-unit">
 				<img class="nav-img" src="images/home.png" alt="Home" />
 				<span class="nav-desc">Home</span>
 			</a>
