--- a/Wag1memeing-feed/src/settings.html
+++ b/Wag1memeing-feed/src/settings.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Settings menu</title>
 		<link rel="stylesheet" href="css/settings.css" />
+		<script defer src="js/buttons.js"></script>
 	</head>
 	<body>
 		<header>
@@ -12,10 +13,10 @@
 				<h1 class="page-title">Wag1 Memeing Youtube Feed - Settings</h1>
 			</div>
 			<div class="header-btns">
-				<a href="#" class="minimize"
+				<a href="javascript:Minimize()" class="minimize"
 					><img src="images/minimize.png" alt="Minimize"
 				/></a>
-				<a href="#" class="exit"
+				<a href="javascript:Exit()" class="exit"
 					><img src="images/remove-close.png" alt="Minimize"
 				/></a>
 			</div>
