--- a/Wag1memeing-feed/src/home.html
+++ b/Wag1memeing-feed/src/home.html
@@ -14,7 +14,7 @@
 				<h1 class="page-title">Wag1 Memeing Youtube Feed</h1>
 			</div>
 			<div class="header-btns">
-				<a href="settings.html" class="settings">
+				<a href="javascript:Settings()" class="settings">
 					<img src="images/settings.png" alt="Settings" />
 				</a>
 				<a href="javascript:Minimize()" class="minimize"
