--- a/Wag1memeing-feed/src/settings.html
+++ b/Wag1memeing-feed/src/settings.html
@@ -29,7 +29,7 @@
 				<p><code>{VIDEO_TITLE}</code> = Video title</p>
 			</div>
 			<div class="delay">
-				<span class="delay-span">Check delay</span>
+				<span class="delay-span">Check delay (ms)</span>
 				<input type="text" />
 			</div>
 			<div class="buttons">
